# tick-processor

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
include/: tick.h
notebooks/: grunwald_letnikov_fractional_derivatives.ipynb
python/: stock_data.py
src/: main.cpp  parser.cpp
tests/: test_main.cpp
